--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,17 +47,21 @@ body::-webkit-scrollbar {
     width: 3px;
     min-height: 100vh;
 }
+
+section {
+    justify-content: space-evenly;
+    position: relative;
+    width: 100%;
+    text-align: justify;
+}
 ul, ol {
     list-style: none;
     font-size:x-small;
     padding-left:0;
 }
 table {
-    justify-content: space-around;
     position: relative;
-    width: min(max-content);
     text-align: center;
-    margin: 0 1rem 0;
     padding:0.6em 0;
     border: 1px solid #000;
     border-radius:0.5rem;
@@ -69,6 +73,7 @@ table {
 th {
     color:var(--pipi-white);
 	font-weight: 50;
+    font-size:x-small;
     padding:0 1.6vw 0;
 }
 td {
@@ -77,15 +82,20 @@ td {
     padding:0 1.6vw 0;
     text-align: center;
 }
-
-section {
-    justify-content: space-around;
-    position: relative;
-    width: 100%;
-    text-align: justify;
+caption {
+    caption-side: top;
+    margin: 0.3rem;
+    font-weight: bold;
+    color: var(--matrix-green);}
 }
-q, cite, figcaption {
+aside {
+    position:relative;
+    display:block;
+    width:75%;
+}
+q, cite {
     font-size:x-small;
+    margin-left:3.7vw;
     width: 100%;
     line-height: 0;
     text-align: center;
@@ -252,12 +262,12 @@ main {
     font-family: Arial, Verdana, Helvetica, sans-serif;
     font-size:var(--base-font-size);
     letter-spacing: 0.28vw;
-    padding: 2vw 0 8vw;
+    padding: 2vw 0.5vw 8vw;
     min-height:89vh;
 }
 .grid-container {
     display: grid;
-    gap: 1vw;
+    gap: 1.2vw;
     grid-auto-columns: 1fr;
     grid-template-areas:
     'one' 'two' 'three' 'four' 'five';
@@ -275,7 +285,7 @@ main {
     color:var(--pipi-white);
     justify-content: space-evenly;
     line-height: 1.337em;
-    padding: 0 1.37vw 1.6rem;
+    padding: 0 1.7vw 1.6rem;
     position: relative;
     text-shadow: 1.5px 2px #000;
     width: 100%;
@@ -336,7 +346,7 @@ footer {
     text-align: center;
     width: 100%;
 }
-footer .footer-container {
+.footer-container {
     display: flex;
     justify-content: space-between;
     padding: 2vh 5vw 12vh 3vw;
@@ -358,12 +368,26 @@ footer .footer-container {
     right: 0;
     margin-left: 3vw;
 }
-footer #instagram-link {
+.header-content > span#jumi-logo {
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 2vw;
+}
+#jumi-biz {
+    animation: neon .08s ease-in-out infinite alternate;
+    background-color: transparent;
+    color: var(--laser-blue);
+    cursor: pointer;
+    line-height: 1.337em;
+    text-align: center;
+    text-decoration: none;
+}
+#instagram-link {
     cursor: pointer;
     width:30px;
     height:30px;
 }
-footer #contact-email {
+#contact-email {
     animation: neon .08s ease-in-out infinite alternate;
     background-color: var(--shadow-grey);
     color: var(--laser-blue);
@@ -379,8 +403,25 @@ footer #export-icon {
 footer #goto-top {
     cursor: pointer;
 }
-.bsp-txt > * {text-align:left;}
+#analyzer {
+    display:flex;
+    justify-content:center;
+}
+#banner {
+    align-items: center;
+    color: var(--shadow-grey);
+    animation: creepshow 60s infinite;
+    display: flex;
+    font-size:small;
+    text-shadow:none;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+}
 #UAP > *{
     animation: neon .08s ease-in-out infinite alternate;
     color: var(--neon-pink);
+}
+#tabelle-1 {
+    justify-content:center;
 }
