--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,157 @@
+main {
+    background-color: #000;
+    font-family: Arial, Verdana, Helvetica, sans-serif;
+    font-size:var(--base-font-size);
+    letter-spacing: 0.28vw;
+    padding: 2vw 0.5vw 8vw;
+    min-height:89vh;
+}
+.flex {
+    display: flex;
+    gap: 0.6rem;
+}
+.flow > *:where(:not(:first-child)) {
+    margin-top: 0.2rem;
+}
+.grid-container {
+    display: grid;
+    gap: 1.2vw;
+    grid-auto-columns: 1fr;
+    grid-template-areas:
+    'one' 'two' 'three' 'four' 'five';
+    grid-template-columns:
+    repeat(auto-fit, minmax(200px, 1fr));
+    justify-content: space-around;
+    margin-inline: auto;
+    width: min(97vw, 97%);
+}
+.content {
+    align-items: center;
+    background-color: var(--shadow-grey);
+    border-radius: 0.35rem;
+    box-shadow:var(--space-motion);
+    color:var(--pipi-white);
+    justify-content: space-evenly;
+    line-height: 1.337em;
+    padding: 0 1.7vw 1.6rem;
+    position: relative;
+    text-shadow: 1.5px 2px #000;
+    width: 100%;
+}
+.content:nth-child(1) {grid-area: one;}
+.content:nth-child(2) {grid-area: two;}
+.content:nth-child(3) {grid-area: three;}
+.content:nth-child(4) {grid-area: four;}
+.content:nth-child(5) {grid-area: five;}
+.content h1 {
+    transform: translateZ(0);
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--matrix-green);
+    font-family: 'Sarpanch', sans-serif;
+    width: 100%; text-align: center;
+    letter-spacing: 0.28vw;
+}
+.content h2 {
+    color: var(--matrix-green);
+    width: 100%; text-align: center;
+}
+.content h3 {
+    color: var(--matrix-green);
+    width: 100%; text-align: center;}
+.content h4 {width: 100%; text-align: center;color: var(--matrix-green);}
+.content p {
+    color:var(--pipi-white);
+}
+.content a {
+    color: var(--laser-blue);
+    text-decoration: none;
+    font-weight: bold;
+}
+.content b {color:#FFF;}
+.content a:hover,
+.content a:focus {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    text-shadow: none;
+    border: none;
+    outline: none;
+}
+.content hgroup {
+    width:100%;
+    text-align:center;
+}
+.content img {
+    width: 100%;
+    box-shadow:var(--ants-cry);
+}
+.quiz-answers {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    width: 100%;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    display:inline-block;
+    font-size: large;
+}
+.jumi-font {
+    font-family: 'Sarpanch', sans-serif;
+    letter-spacing: 0.23rem;
+}
+.button-styled span {
+    background-color: #333;
+    border-radius: 3px;
+    border: 1px solid #000;
+    color: #fff;
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 0.65em;
+    font-weight: 700;
+    height: 18px;
+    line-height: 1.6em;
+    outline: none;
+    padding: 0.1em 0.6em 0.1em;
+    text-align: center;
+    text-shadow: none;
+    box-shadow: 0 3px 0 rgba(0,0,0,0.25),
+    inset 0 2px 0 rgba(170,170,170,0.8);
+}
+.bsp-txt {
+    font-size:small;
+    text-align:left;
+    width: 100%;
+}
+footer {
+    align-items: center;
+    background-color: var(--shadow-grey);
+    display: flex;
+    justify-content: space-around;
+    margin-top: auto;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 2vh 5vw 12vh 3vw;
+    vertical-align: middle;
+    width: 100%;
+    height:100%;
+}
+.leftside-profil-icons,
+.rightside-site-features {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.leftside-profil-icons > * {
+    left: 0;
+    margin-right: 3vw;
+}
+.rightside-site-features > * {
+    right: 0;
+    margin-left: 3vw;
+}
 [id*="modalTrigger"] {
     border-radius: 3px;
     cursor: pointer;
@@ -20,12 +174,12 @@ dialog[open] {
 dialog.hide {
     -webkit-animation: hide 150ms ease normal;
 }
-dialog::backdrop {background-color: rgba(0, 0, 0, 0.5);
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
 }
-dialog > figure {margin:0;color: var(--matrix-green);}
-.jumi-font {
-    font-family: 'Sarpanch', sans-serif;
-    letter-spacing: 0.23rem;
+dialog > figure {
+    margin:0;
+    color: var(--matrix-green);
 }
 dialog [id*="closeModal"] {
     align-items: center;
@@ -54,14 +208,18 @@ dialog [id*="closeModal"]:focus {
     outline: none;
     text-decoration: none;
 }
-.quiz-answers {
-    animation: neon .08s ease-in-out infinite alternate;
-    color: var(--neon-pink);
-    width: 100%;
-    text-align:match-parent;
-    font-family:'c64-Pro';
-    display:inline-block;
-    font-size: large;
+figure figcaption {
+    align-items: center;
+    color: var(--matrix-green);
+    display: flex;
+    flex-direction: column;
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 0.6em;
+    justify-content: center;
+    text-shadow: 1.5px 2px #000;
+}
+figure > img {
+    border-radius: 0.5rem;
 }
 details {
     justify-content: space-around;
@@ -90,59 +248,88 @@ summary {
     box-shadow:var(--ants-cry);
     background-color:var(--high-ground);
 }
-summary:hover,
-summary:focus {
+summary:hover, summary:focus {
     animation: neon-box .08s ease-in-out infinite alternate;
     color: var(--neon-pink);
     border: none;
     outline: none;
     box-shadow: none;
 }
-.list-icon {
-    align-items: center;
-    display: inline-block;
-    width: 30px;
-    padding: 0 4px;
-    margin: 0 18px;
-    text-align: left;
-    vertical-align: middle;
-}
-.flex {
-    display: flex;
-    gap: 0.6rem;
-}
-.flow > *:where(:not(:first-child)) {margin-top: 0.2rem;}
-.button-styled span {
-    background-color: #333;
-    border-radius: 3px;
-    border: 1px solid #000;
-    color: #fff;
-    display: inline-block;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 0.65em;
-    font-weight: 700;
-    height: 18px;
-    line-height: 1.6em;
+button.menu-button:hover {
     outline: none;
-    padding: 0.1em 0.6em 0.1em;
+    border: none;
+}
+#jumi-logo {
     text-align: center;
-    text-shadow: none;
-    box-shadow:
-        0 3px 0 rgba(0,0,0,0.25),
-        inset 0 2px 0 rgba(170,170,170,0.8);
+    vertical-align: middle;
+    margin-left: 2vw;
 }
-.bsp-txt {font-size:small;text-align:left;width: 100%;}
+.header-content#jumi-biz {
+    animation: neon .08s ease-in-out infinite alternate;
+    background-color: transparent;
+    color: var(--laser-blue);
+    cursor: pointer;
+    line-height: 1.337em;
+    text-align: center;
+    text-decoration: none;
+}
 
-figure figcaption {
-    align-items: center;
-    color: var(--matrix-green);
-    display: flex;
-    flex-direction: column;
+#beschreibung {font-size:small;width: 100%;}
+
+#instagram-link {
+    cursor: pointer;
+    width:30px;
+    height:30px;
+}
+#contact-email {
+    animation: neon .08s ease-in-out infinite alternate;
+    background-color: var(--shadow-grey);
+    color: var(--laser-blue);
     font-family: 'Sarpanch', sans-serif;
-    font-size: 0.6em;
+    font-size: 1.337rem;
+    font-weight: 200;
+    letter-spacing: 0.12em;
+    text-decoration: none;
+}
+#export-icon {
+    cursor: pointer;
+}
+#goto-top {
+    cursor: pointer;
+}
+#analyzer {
+    display:flex;
+    justify-content:center;
+}
+#banner {
+    align-items: center;
+    color: var(--shadow-grey);
+    animation: creepshow 60s infinite;
+    display: flex;
+    font-size:small;
+    text-shadow:none;
+    height: 100vh;
     justify-content: center;
-    text-shadow: 1.5px 2px #000;
+    margin: 0;
 }
-figure > img {
-    border-radius: 0.5rem;
+#UAP > *{
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
 }
+#tabelle-1 {
+    position: relative;
+    text-align: center;
+    table-layout: fixed;
+}
+#tabelle-2 {
+    position: relative;
+    text-align: center;
+    padding:0.6em 0;
+    border: 1px solid #000;
+    border-radius:0.5rem;
+    background-color:var(--high-ground);
+    table-layout: fixed;
+    outline: none;
+    box-shadow:var(--ants-cry);
+}
+
