--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,3 @@
-@font-face {
-font-family:'Sarpanch';font-style:normal;src:
-url('../fonts/sarpanch-v11-latin-regular.woff2')
-/* Super Modern Browsers */ format('woff2'),
-url('../fonts/sarpanch-v11-latin-regular.woff')
-/* Modern Browsers */ format('woff'),
-url('../fonts/sarpanch-v11-latin-regular.ttf')
-/* Safari, Android, iOS */ format('truetype'),
-url('../fonts/sarpanch-v11-latin-regular.svg#Sarpanch') /* Legacy iOS */ format('svg');
-}
-@font-face {
-font-family:'c64-Pro';font-style:normal;src:
-url('../fonts/C64_Pro-STYLE.woff2')
-/* Super Modern Browsers */ format('woff2'),
-url('../fonts/C64_Pro-STYLE.woff')
-/* Modern Browsers */ format('woff'),
-url('../fonts/C64_Pro-STYLE.ttf')
-/* Safari, Android, iOS */ format('truetype');
-}
-/* Colors for Words */
-.r{color:#FF1337 !important }
-.g{color:#A3B8C8 !important }
-.b{color:#1337FF !important }
-.y{color:#FFFF00 !important }
-.c{color:#119988 !important }
-.m{color:#FF00FF !important }
-.o{color:#FFA500 !important }
-.p{color:var(--neon-pink) !important }
-body::-webkit-scrollbar {
-/* Scrollleiste ausblenden */
-    background-color: #000;
-    display: none;
-    width: 3px;
-    min-height: 100vh;
-}
-
 section {
     justify-content: space-evenly;
     position: relative;
@@ -69,13 +33,6 @@ aside {
     display:block;
     width:75%;
 }
-q, cite {
-    font-size:x-small;
-    margin-left:3.7vw;
-    width: 100%;
-    line-height: 0;
-    text-align: center;
-}
 code {
     display: inline-table;
     font-family: 'Source Code Pro', monospace;
@@ -95,146 +52,22 @@ mark {
     color: revert;
     font-size: 0.85em;
 }
-header {
-    align-items: center;
-    background-color: var(--shadow-grey);
-    display: flex;
-    font-family: 'Sarpanch', sans-serif;
-    font-size: 1.8rem;
-    height: 55px;
-    justify-content: space-between;
-    letter-spacing: 0.23rem;
-    position: relative;
-    text-shadow: 1.5px 2px #000;
-    box-shadow:var(--space-motion);
-}
-.header-content {
-    transform: translateZ(0);
-    align-items: center;
-    display: inline-block;
-    vertical-align: middle;
-    transform: translateZ(0);
-    text-shadow: 1.5px 2px #000;
-    animation: neon .08s ease-in-out infinite alternate;
-}
-header::after {
-    clear: both;
-    content: "";
-    display: block;
-}
-header a {
-    color: var(--laser-blue);
-    text-decoration: none;
-}
-header a:hover,
-header a:focus {
-    animation: neon .08s ease-in-out infinite alternate;
-    outline: none;
-    color: var(--neon-pink);
-    text-shadow: none;
-}
-.menu-list {
-    transform: translateZ(0);
-    background-color: var(--shadow-grey);
-    border-bottom-left-radius: 0.5rem;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 54px;
-    transition: clip-path ease-in-out 350ms;
-    z-index: 1;
-    box-shadow:var(--space-motion);
-}
-.menu-button {
-    background-color: transparent;
-    border-radius: 2px;
-    border: 0;
-    cursor: pointer;
-    margin: 8px;
-    padding: 18px;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.hidden-menu {
-    clip-path: inset(50%);
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    box-shadow:var(--space-motion);
-    white-space: nowrap;
-    width: 1px;
-}
-.menu-icon,
-.menu-icon::before,
-.menu-icon::after {
-     background-color: var(--laser-blue);
-     border-radius: 2px;
-     content: "";
-     display: block;
-     height: 3px;
-     transition: all ease-in-out 400ms;
-     width: 25px;
-}
-.menu-icon::before {
-     transform: translateY(-6px);
-}
-.menu-icon::after {
-     transform: translateY(3px);
-}
-[aria-expanded="true"] .menu-icon {
-     transform: rotate(45deg);
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-[aria-expanded="true"] .menu-icon::before {
-     opacity: 0;
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-[aria-expanded="true"] .menu-icon::after {
-    transform: translateY(-3px) rotate(-90deg);
-    animation: neon-box .08s ease-in-out infinite alternate;
-}
-.menu-list a {
-    border-bottom-left-radius: 0.35rem;
-    transform: scaleY(1.2);
-    color: var(--laser-blue);
-    display: block;
-    font-family: 'Sarpanch', sans-serif;
-    font-size: 24px;
-    margin: 0 24px 0 0;
-    padding: 20px 1vw;
-    text-align: left;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-shadow: 1.5px 2px #000;
-}
-.menu-list[data-state="opened"] {
-    animation: clipPathCircleOpen 300ms ease-in-out forwards;
-    display: block;
-}
-.menu-list[data-state="closing"] {
-    animation: clipPathCircleClose 300ms ease-in-out forwards;
-}
-.menu-list[data-state="closed"] {
-    display: none;
-}
-.list-icon {
-     align-items: center;
-     display: inline-block;
-     width: 30px;
-     padding: 0 4px;
-     margin: 0 18px;
-     text-align: left;
-     vertical-align: middle;
-}
 .error-page {
     position:relative;
     min-width:65vw;
     justify-content: center;
     text-align:center;
+}
+.zitiert {
+    font-size:x-small;
+    width: 100%;
+    line-height: 0;
+    text-align: center;
+}
+.bsp-txt {
+    font-size:small;
+    text-align:left;
+    width: 100%;
 }
 
 
